# limbo-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  old_main.rs
src/config/: default.toml  mod.rs  ty.rs
src/config/ty/: location.rs
src/network/: connection.rs  ext.rs  mod.rs  server.rs
src/network/phase/: mod.rs
src/network/phase/configuration/: mod.rs  utils.rs
src/network/phase/game/: mod.rs  utils.rs
src/network/phase/handshake/: mod.rs  utils.rs
src/network/phase/login/: mod.rs  utils.rs
src/network/phase/status/: mod.rs  utils.rs
src/network/utils/: mod.rs  state.rs
src/player/: addr.rs  mod.rs  skin.rs
src/utils/: mod.rs  velocity.rs
src/utils/registry_data/: mod.rs
