[package]
name = "limbo"
description = "Simple, performant, and reliable Limbo server for Minecraft"
version = "0.1.0"
authors = ["Sculas <contact@sculas.xyz>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.81"
azalea-core = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
azalea-auth = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
azalea-protocol = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
azalea-buf = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
simdnbt = { git = "https://github.com/azalea-rs/simdnbt", version = "0.4" }
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"
figment = { version = "0.10", features = ["toml"] }
serde = "1.0"
rand = "0.8.5"
hmac-sha256 = "1.1.7"
thiserror = "1.0"
dashmap = "5.5.3"
